--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "frontend",
+  "name": "hangman",
   "version": "0.1.0",
+  "author": "Ganesh Basa",
+  "licence": "MIT",
+  "homepage": "https://ganeshbasa.com",
   "private": true,
   "scripts": {
     "dev": "next dev",
